# BullyAlgorithm

./: CMakeLists.txt  connect.cmd  readme.md  run.cmd
include/BullyAlgo/: ConsoleUi.h  Message.h  Node.h  Router.h  RoutingClient.h  RoutingServer.h  TCPClient.h  TCPServer.h
src/: Message.cpp  Node.cpp  NodeMain.cpp  Router.cpp  RoutingClient.cpp  RoutingClientMain.cpp  RoutingServer.cpp  RoutingServerMain.cpp  TCPClient.cpp  TCPServer.cpp  main.cpp
